padding and spacing corrected for mobile layout

--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -6,25 +6,28 @@
 }
 
 .body {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 0 1rem 0 1rem;
+    padding: 0 0 1.5rem 0;
 
 // Make adjustments to font sizes on Mobile & Tablet
     &__title {
         font-family: 'AvenirNextLTPro-Demi';
         font-size: 3rem;
-        // margin-left: 1rem;
+        margin: 0;
+        padding: 1.5rem 0 1rem 0;
     }
  //Ask the TA about image sizing as this is causing lots of problems for this project
     &__img {
         width: 100%;
         height: auto;
         object-fit: cover;
+
     }
 
     &__text--bold { 
         font-family: 'AvenirNextLTPro-Demi';
-        margin-bottom: 1rem;
+        margin: 0;
+        padding: 1rem 0 0 0;
         font-size: 1.5rem;
         line-height: 2.5rem;
     }
@@ -36,12 +39,15 @@
     &__subtitle { 
         font-family: 'AvenirNextLTPro-Regular';
         font-size: 1.5rem;
+        margin: 0;
+        padding: 1.5rem 0 1rem 0;
 
     }
 
     &__text {
         font-family: 'AvenirNextLTPro-Regular';
         line-height: 1.75rem;
+        margin: 0;
     }
 }
 
