--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -16,13 +16,14 @@
         font-family: "AvenirNextLTPro-Demi";
         font-weight: 700;
         font-size: 2.5rem;
-        margin-left: 1rem;
-        padding-top: 1.5rem;
+        margin: 0 0 0 1rem;
+        padding: 1.5rem 0 1rem 0;
     }
 
     &__social {
         display: flex;
-        margin-left: 1rem;
+        margin: 0 0 0 1rem;
+        padding: 1.5rem 0 1rem 0;
     }
 
     &__social-icon {
@@ -33,15 +34,18 @@
     &__contact {
         display: flex;
         flex-direction: column;
-        margin: 1.5rem 0rem 0.5rem 1rem;
+        margin: 1.5rem 0rem 1rem 1rem;
     }
 
     &__contact-text {
         font-family: "AvenirNextLTPro-Regular";
+        margin: 1rem 0 0rem 0;
+        font-size: 1.2rem;
     }
 
     &__contact-text--bold {
         font-family: "AvenirNextLTPro-Demi";
+        font-size: 1.2rem;
     }
 
     &__contact-title {
@@ -49,5 +53,8 @@
         text-transform: uppercase;
         font-size: 2.5rem;
         margin-top: 5rem;
+    }
+    p {
+        margin: 0 0 0.5rem 0;
     }
 }
