--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -10,6 +10,7 @@
 // SCSS Code
 .section {
     background-color: #FAFAFA;
+    padding: 0 0 1rem 0;
     
     &__title {
         padding-top: 1.5rem;
