--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -12,8 +12,8 @@
     
 
     &__title {
-        margin-top: 0;
-        padding-top: 1.5rem;
+        margin: 0;
+        padding: 1.5rem 0 1rem 0;
         color: white;
         display: flex;
         justify-content: center;
@@ -30,7 +30,7 @@
         display: flex;
         justify-content: space-around;
         padding: 10px;
-        margin-bottom: 0;
+        margin: 0;
     }
 
     &__list-item {
