--- a/styles/partials/_hero.scss
+++ b/styles/partials/_hero.scss
@@ -26,8 +26,9 @@
     }
 
     &__img {
-        height: 80vh;
-        width: 100vw;
+        width: 100%;
+        height: auto;
+        object-fit: cover;
     }
 
     &__img--overlay {
